force-app/main/default/objects/Contract_Type__c/Contract_Type__c.object-meta.xml
<CustomObject>
    <description>Objeto Custom mientras no se utilice el objeto standar que no esta habilitado con las licencias actuales Junio 2025</description>
    <label>Tipo de contrato</label>
    <nameField>
        <label>Contract Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>