force-app/main/default/objects/Contract_Type__c/fields/Censal__c.field-meta.xml
<CustomField>
    <fullName>Censal__c</fullName>
    <label>Censal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>