force-app/main/default/objects/Contract_Type__c/fields/Codigo_Entidad__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Entidad__c</fullName>
    <label>Codigo Entidad</label>
    <length>10</length>
    <type>Text</type>
</CustomField>