force-app/main/default/objects/Contract_Type__c/fields/Codigo_Titulo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Titulo__c</fullName>
    <label>Codigo Titulo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>