force-app/main/default/objects/Contract_Type__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuota</fullName>
            </value>
            <value>
                <fullName>Licencia</fullName>
            </value>
            <value>
                <fullName>Titulo Oficial</fullName>
            </value>
            <value>
                <fullName>Titulo CINA</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>