force-app/main/default/objects/Contract_Type__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANU</fullName>
                <label>Anual</label>
            </value>
            <value>
                <fullName>CUR</fullName>
                <label>Cursillo</label>
            </value>
            <value>
                <fullName>DIR</fullName>
                <label>Directivo</label>
            </value>
            <value>
                <fullName>ESC</fullName>
                <label>Escuela</label>
            </value>
            <value>
                <fullName>JUE</fullName>
                <label>Juez</label>
            </value>
            <value>
                <fullName>REG</fullName>
                <label>Regata</label>
            </value>
            <value>
                <fullName>TD1</fullName>
            </value>
            <value>
                <fullName>TEC</fullName>
                <label>Tecnico</label>
            </value>
            <value>
                <fullName>ANU1</fullName>
                <label>Anual Domiciliada</label>
            </value>
            <value>
                <fullName>AND</fullName>
                <label>Anual No Domiciliada</label>
            </value>
            <value>
                <fullName>MED</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>CUR1</fullName>
                <label>Curso</label>
            </value>
            <value>
                <fullName>TEM</fullName>
                <label>Temporada</label>
            </value>
            <value>
                <fullName>TD2</fullName>
            </value>
            <value>
                <fullName>DT1</fullName>
            </value>
            <value>
                <fullName>DT2</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>DpC</fullName>
            </value>
            <value>
                <fullName>EsB</fullName>
            </value>
            <value>
                <fullName>OTR</fullName>
            </value>
            <value>
                <fullName>AM1</fullName>
            </value>
            <value>
                <fullName>AMG</fullName>
            </value>
            <value>
                <fullName>DpB</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>TGa</fullName>
            </value>
            <value>
                <fullName>DPJ</fullName>
            </value>
            <value>
                <fullName>DPT</fullName>
            </value>
            <value>
                <fullName>DT3</fullName>
            </value>
            <value>
                <fullName>DTJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>